Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-07-23 (SVN):
    * snd_mp3.c (mp3_startread): don't error upon a short read as it may
      be a short but still a valid file.

2013-07-22 (SVN):
    * snd_codec: store the samplebits value in the snd_info_t struct,
      and add a new blocksize field to it which the flac decoder can
      use. updated decoder sources for the snd_info_t changes, where
      I made minor tidy-ups too, tightening several format checks and
      fixing a few gotchas in snd_wave.c and snd_mem.c.
    * snd_flac.c: adjusted for snd_info_t changes. no longed storing
      metadata->data.stream_info in our private data, but just storing
      a pointer to the stream->info structure. No longer checking the
      metadata total_samples field (the FLAC__StreamMetadata_StreamInfo
      doesn't seem to have any alignment or pack attributes and I don't
      safe with its offset across different compilers), but added check
      to make sure that we hit and parsed a STREAMINFO metadata instead,
      and our new state seems just fine for validating the file.

2013-07-22 (SVN):
    * docs/ReleaseNotes: updated for a future release.

2013-07-21 (SVN):
    * added flac music support. it is not enabled by default, edit the
      Makefile for USE_CODEC_FLAC, or add "USE_CODEC_FLAC=yes" to your
      make command line arguments.

2013-07-18 (SVN):
    * docs/README: update for web links.

2013-07-17 (SVN):
    * oslibs: macosx, windows: recompile libopusfile, using the latest
      from xiph.org git repo.

2013-07-12 (SVN):
    * oslibs: macosx, windows: recompile libopus using the latest stable
      v1.0.3 release.

2013-06-28 (SVN):
    * pr_edict.c (PR_GetProgFilename): simplified and hardened more.

2013-06-24 (SVN):
    * oslibs: updated msinttypes to r29 from mainstream googlecode.com
      repository.

2013-06-24 (SVN):
    * docs/COMPILE: updated tested compiler versions.

2013-06-16 (SVN):